--- a/templates/project.html
+++ b/templates/project.html
@@ -37,9 +37,6 @@ Sanish Shrestha
 <li class="navigation-item">
 <a class="navigation-link" href="project.html">Projects</a>
 </li>
-<li class="navigation-item">
-  <a class="navigation-link" href="pomodoro.html">Pomodoro</a>
-</li>
 <li class="navigation-item separator">
 <span>|</span>
 </li>
@@ -54,11 +51,12 @@ Sanish Shrestha
 </header>
 <p><strong>Projects I am actively working on</strong></p>
 <ul>
-<li><a href="https://github.com/mostanglan/login">Cupid</a>: It is Online Dating System</li>
-<li><a href="https://github.com/facebookincubator/TestSlide">Hamro Furniture</a>: Website for buying different kind of furniture.</li>
-<li><a href="https://github.com/mostanglan/python">Python Projects</a>: Python program such as simple browser, encryption and decryption of file, steganography, etc.</li>
-<li><a href="https://github.com/mostanglan/micro">Micro Blog</a>: Micro Blog website</li>
+<li><a href="https://github.com/mostanglan/cupid">Cupid</a>: It is Online Dating System</li>
+<li><a href="https://github.com/mostanglan/hamofurniture">Hamro Furniture</a>: Website for buying different kind of furniture.</li>
+<li><a href="https://github.com/mostanglan/pomodoro-timer">Pomodoro Timer</a>: Pomodoro and to-do list for productive work.</li>
+<li><a href="https://github.com/mostanglan/micro">Micro Blog</a>: Micro Blog website.</li>
 <li><a href="https://github.com/mostanglan/CosineSimilarityAPI">Cosine Similarity Api</a>: It can calculate cosine similarity of two different people.</li>
+<li><a href="https://github.com/mostanglan/python">Python Projects</a>: Python program such as simple browser, encryption and decryption of file, steganography, etc.</li>
 <li><a href="https://github.com/mostanglan?tab=repositories">More...</a>: Check out my github repositories.</li>
 </ul>
 </article>
