--- a/templates/project.html
+++ b/templates/project.html
@@ -53,7 +53,7 @@ Sanish Shrestha
 <ul>
 <li><a href="https://github.com/mostanglan/cupid">Cupid</a>: It is Online Dating System</li>
 <li><a href="https://github.com/mostanglan/hamofurniture">Hamro Furniture</a>: Website for buying different kind of furniture.</li>
-<li><a href="https://github.com/mostanglan/pomodoro-timer">Pomodoro Timer</a>: Pomodoro and to-do list for productive work.</li>
+<li><a href="https://pomodoro-timer-37k.pages.dev">Pomodoro Timer</a>: Pomodoro and to-do list for productive work.</li>
 <li><a href="https://github.com/mostanglan/micro">Micro Blog</a>: Micro Blog website.</li>
 <li><a href="https://github.com/mostanglan/CosineSimilarityAPI">Cosine Similarity Api</a>: It can calculate cosine similarity of two different people.</li>
 <li><a href="https://github.com/mostanglan/python">Python Projects</a>: Python program such as simple browser, encryption and decryption of file, steganography, etc.</li>
