--- a/templates/about.html
+++ b/templates/about.html
@@ -33,9 +33,9 @@ Sanish Shrestha
 <li class="navigation-item">
 <a class="navigation-link" href="about.html">About</a>
 </li>
-<li class="navigation-item">
+<!-- <li class="navigation-item">
 <a class="navigation-link" href="project.html">Projects</a>
-</li>
+</li> -->
 <li class="navigation-item separator">
 <span>|</span>
 </li>
@@ -49,19 +49,18 @@ Sanish Shrestha
 <h1>About</h1>
 </header>
 <p><strong>Short summary:</strong></p>
-<p>My name is Sanish Shrestha. I&rsquo;m a currently studing Bachelor of Computer Application.</p>
+<p>My name is Sanish Shrestha. I kinda know how to code😎</p>
 <p><strong>About my interest shortly:</strong></p>
 <p>I am passionate about open-source software, scalable systems and code quality.</p>
-<p><strong>Experience</strong></p>
-<p>I have experience in freelancing, hardware and graphic design</p>
-<p><strong><p>My CV: </strong><a href="../static/cv/sanishcv.pdf">click here</a></p></p>
+<!-- <p><strong>Experience</strong></p>
+<p>I have experience in freelancing, hardware and graphic design</p> -->
 <p>My preferred programming languages nowadays is Python.</p>
 </article>
 </section>
 </div>
 <footer class="footer">
 <section class="container">
-Powered by <a href="https://github.com/mostanglan/">ME</a>.
+Powered by <a href="https://github.com/sanish-alive/">ME</a>.
 </section>
 </footer>
 </main>
