--- a/templates/about.html
+++ b/templates/about.html
@@ -19,7 +19,7 @@
 <main class="wrapper">
 <nav class="navigation">
 <section class="container">
-<a class="navigation-title" href="https://sanishrestha.com.np/">
+<a class="navigation-title" href="/">
 Sanish Shrestha
 </a>
 <span id="dark-mode-toggle" class="float-right">
@@ -31,7 +31,7 @@ Sanish Shrestha
 </label>
 <ul class="navigation-list">
 <li class="navigation-item">
-<a class="navigation-link" href="about.html">About</a>
+<a class="navigation-link" href="/">About</a>
 </li>
 <!-- <li class="navigation-item">
 <a class="navigation-link" href="project.html">Projects</a>
